fixed spacing issue between splash and profile.

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,6 @@
 #main__container {
     position: absolute;
-    padding-top: calc(100vh + 40vh);
+    padding-top: 40vh;
 }
 
 #main__content {
